# sideprojects

./: .gitmodules  README.md
computer_vision/: .gitignore  pyproject.toml  vit.py
finanical_tracker/: .gitignore  Dockerfile  Makefile  README.md  app.yaml  pyproject.toml
finanical_tracker/.github/workflows/: deploy.yml
finanical_tracker/app/: database.py  main.py  widgets.py
home-media-server/: README.md  pyproject.toml
home-media-server/app/: main.py
home-media-server/app/static/css/: movies.css
home-media-server/app/templates/: index.html  main.html  movie_detail.html  movies.html  player.html
yagizflix/: .gitignore  episodes.db  pyproject.toml
yagizflix/app/: config.py  database.py  main.py  models.py
yagizflix/app/routers/: __init__.py  player.py  titles.py
yagizflix/app/templates/: index.html
yagizflix/app/templates/player/: player.html
yagizflix/app/templates/titles/: title_details.html  titles.html
